--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,4 +64,10 @@
         android:inputType="number"
         android:textColorHint="@color/colorPrimary" />
 
+    <Button
+        android:id="@+id/random"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="random" />
+
 </LinearLayout>
