--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -95,7 +95,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Current progress"
-        android:inputType="number"
+        android:inputType="numberSigned"
         android:textColorHint="@color/colorPrimary" />
 
     <Button
