--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,6 +46,14 @@
         android:inputType="number"
         android:textColorHint="@color/colorPrimary" />
 
+    <androidx.appcompat.widget.AppCompatEditText
+        android:id="@+id/granularity"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Granularity (default:3)"
+        android:inputType="number"
+        android:textColorHint="@color/colorPrimary" />
+
     <RadioGroup
         android:id="@+id/countdown"
         android:layout_width="match_parent"
